# achievo-demo

./: .algokit.toml  README.md  achievo-demo.code-workspace
.algokit/: .copier-answers.yml
backend/: README.md  auth.py  db.py  main.py  models.py  pyproject.toml  schemas.py
backend/tests/: test_api.py
projects/achievo-demo-contracts/: .algokit.toml  README.md  pyproject.toml
projects/achievo-demo-contracts/.algokit/: .copier-answers.yml
projects/achievo-demo-contracts/smart_contracts/contracts/: contract.py  deploy_config.py
projects/achievo-demo-frontend/: .algokit.toml  README.md  package-lock.json  package.json
projects/achievo-demo-frontend/.algokit/: .copier-answers.yml
projects/achievo-demo-frontend/src/components/: AppCalls.tsx
