[tool.poetry]
name = "achievo-backend"
version = "0.1.0"
description = "FastAPI backend for Achievo stage 1"
authors = ["devprosvn <work.devpros@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.16"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
